# ORCA

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config_py310.yaml  LICENSE  README.md  data_meme.py  download_and_infer.py  infer_meme.sh  lean_meme.py  meme_infer.py  meme_model.py  pyproject.toml  run_meme.sh
data/seed_108/: dev.json  test.json  train.json
docs/: index.html
orca_score/: __init__.py  clamp.py  cli.py  data.py  infer.py  model.py  train.py  utils.py
